--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div id="container">
 
-        <h1> Hi Calling Back</h1>
+        <h1 id="header"> Hi Calling Back</h1>
     </div>
 </body>
   <script src="./script.js"></script>
